# glib

./: meson.build
docs/reference/gio/: meson.build
docs/reference/glib/: meson.build
gio/: Makefile.am  gcocoanotificationbackend.c  gcontenttype-win32.c  gcontenttype.c  gcontenttype.h  ggntpnotificationbackend.c  giomodule.c  glocalfileinfo.c  gnextstepappinfo.c  gnextstepappinfo.h  gnextstepcontenttype.c  gsocketclient.c
glib/: Makefile.am  gutils.c
